Create featured section

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
 header {
   position: fixed;
   width: 100%;
+  top: 0;
+  z-index: 1;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -42,4 +44,61 @@ header nav ul li {
 
 header nav ul li a {
   color: seashell;
+}
+
+main {
+  margin-top: 69px;
+  text-align: center;
+}
+
+main h2 {
+  padding: 10px;
+}
+
+main h4 {
+  padding: 10px
+}
+
+.mission-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.mission-text {
+  display: flex;
+  flex-flow: column wrap;
+  background-color: black;
+  width: 1200px;
+  position: relative;
+  top: -500px;
+}
+
+.tea-of-the-month {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.featured-tea {
+  display: flex;
+  justify-content: center;
+  align-items: space-around;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  width: 1000px;
+}
+
+.img-container {
+  margin: 15px;
+}
+
+.featured-tea img {
+  width: 300px;
+  height: 200px;
+  margin-bottom: 10px;
 }
