--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ main h4 {
   justify-content: center;
   align-items: center;
   align-content: center;
+  margin-bottom: 50px;
 }
 
 .featured-tea {
