--- a/style.css
+++ b/style.css
@@ -47,59 +47,37 @@ header nav ul li a {
 }
 
 main {
-  margin-top: 69px;
+  position: relative;
+  top: 69px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+#mission {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  top: 70;
+  height: 700px;
+  width: 100%;
+  background-image: url(./images/img-mission-background.webp);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   text-align: center;
 }
 
-main h2 {
-  padding: 10px;
-}
-
-main h4 {
-  padding: 10px
-}
-
-.mission-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-}
-
-.mission-text {
-  display: flex;
-  flex-flow: column wrap;
+#mission-text {
   background-color: black;
-  width: 1200px;
-  position: relative;
-  top: -500px;
-}
-
-.tea-of-the-month {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  align-content: center;
-  margin-bottom: 50px;
+  width: 100%;
 }
 
-.featured-tea {
-  display: flex;
-  justify-content: center;
-  align-items: space-around;
-  flex-wrap: wrap;
-  margin-top: 20px;
-  width: 1000px;
-}
-
-.img-container {
-  margin: 15px;
-}
-
-.featured-tea img {
-  width: 300px;
-  height: 200px;
-  margin-bottom: 10px;
+#mission-text h2,
+#mission-text h4 {
+  padding: 10px;
 }
