--- a/style.css
+++ b/style.css
@@ -151,8 +151,7 @@ footer {
 
 .tea-wrapper {
   display: flex;
-  justify-content: space-evenly;
-  align-content: space-evenly;
+  justify-content: center;
   flex-wrap: wrap;
   width: 1000px;
 }
